# k2-climbing-simulator-tool

./: CMakeLists.txt  README.md
k2-climbing-simulator-tool/: main.py
k2-climbing-simulator-tool/src/: __init__.py  player.py  simulation.py
k2-climbing-simulator-tool/tests/: test_simulation.py
src/: main.cpp
src/climbing/: ClimbingController.cpp  ClimbingController.h
src/roblox/: RobloxInterface.cpp  RobloxInterface.h
tests/: test_climbing_controller.cpp
